--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@
 ################################################################################
 
 /Advanced Programming/Week 1/Recursion.zip
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/School-Notes/FileContentIndex/0cd75024-d1c5-442a-8f3e-fa3183c037dc.vsidx
+.vs/School-Notes/FileContentIndex/04ed051e-6fb0-479b-9b65-cd256c1abb5a.vsidx
+.vs/School-Notes/FileContentIndex/470bfc32-5f1b-4b8d-959b-0b21954948a0.vsidx
+.vs/School-Notes/FileContentIndex/930f782f-5c96-45f6-a9e5-9d849c970e63.vsidx
+.vs/School-Notes/FileContentIndex/495309da-7377-478f-82d4-20b38e07f164.vsidx
+.vs/School-Notes/FileContentIndex/aa002c81-b38f-4324-b9da-6822ad0f78e1.vsidx
+.vs/School-Notes/FileContentIndex/c986dea2-0601-4afd-937b-85dd4a9ba232.vsidx
+.vs/School-Notes/FileContentIndex/ddbc17e9-7977-460e-b274-82386d46934e.vsidx
+.vs/School-Notes/v17/.wsuo
+.vs/School-Notes/v17/Browse.VC.db
+.vs/School-Notes/v17/ipch/AutoPCH/d69804b7741d3908/TEST.ipch
+.vs/School-Notes/v17/ipch/AutoPCH/fe802e4bc878b844/RECURSION.ipch
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/School-Notes/FileContentIndex/0cd75024-d1c5-442a-8f3e-fa3183c037dc.vsidx
+.vs/School-Notes/FileContentIndex/04ed051e-6fb0-479b-9b65-cd256c1abb5a.vsidx
+.vs/School-Notes/FileContentIndex/495309da-7377-478f-82d4-20b38e07f164.vsidx
+.vs/School-Notes/FileContentIndex/aa002c81-b38f-4324-b9da-6822ad0f78e1.vsidx
+.vs/School-Notes/v17/.wsuo
+.vs/School-Notes/v17/Browse.VC.db
