--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 .vs/School-Notes/v17/.wsuo
 .vs/School-Notes/v17/Browse.VC.db
 /.vs
+Advanced Programming/Test Cases/ClassTest/Source.exe
+Advanced Programming/Test Cases/ClassTest/Source.obj
