adding .vs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@
 /.vs
 Advanced Programming/Test Cases/ClassTest/Source.exe
 Advanced Programming/Test Cases/ClassTest/Source.obj
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/FileContentIndex/3ef143d1-ba5d-4089-8775-394899f951dd.vsidx
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/FileContentIndex/b0739582-7b5c-4d19-b073-7799a11f75e7.vsidx
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/FileContentIndex/read.lock
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/.suo
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/Browse.VC.db
+Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/ipch/AutoPCH/ba0d4bba0a7c83af/CLASS CREATION PROGRAM ASSIGNMENT.ipch
