--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,26 @@ Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION
 Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/.suo
 Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/Browse.VC.db
 Advanced Programming/Week 2/CLASS CREATION PROGRAM ASSIGNMENT/.vs/CLASS CREATION PROGRAM ASSIGNMENT/v17/ipch/AutoPCH/ba0d4bba0a7c83af/CLASS CREATION PROGRAM ASSIGNMENT.ipch
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/FileContentIndex/2a8c7622-2976-4756-8481-5dc367026c09.vsidx
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/FileContentIndex/a41feb6e-35f9-4830-9a85-128e465614ae.vsidx
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/FileContentIndex/ac409db9-1d35-45b1-b76d-2afeb9adaa81.vsidx
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/FileContentIndex/b6fdc34c-7c25-4c07-b2db-096c7e9643df.vsidx
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/FileContentIndex/read.lock
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/v17/.suo
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/v17/.wsuo
+Advanced Programming/Week 2/ClassCreationLab/.vs/ClassCreationLab/v17/Browse.VC.db
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/21abf343-99d9-4afd-9498-0373315ba9cd.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/94cba3e3-662e-4f4f-ae02-831ce25e9a15.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/659ad7a4-5159-4e07-8252-5b6cbf6a7085.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/a4a38270-01a7-4b72-8285-79277141f636.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/da59f790-6885-496e-9fc3-a47156af58f7.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/f7f0d42c-f85f-4c6a-aef5-53ab6efd2faf.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/f14b8707-256b-40c9-9193-9ab19fd57da8.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/FileContentIndex/fec46483-f874-44aa-ae14-ee0f3666d773.vsidx
+Advanced Programming/Week 1/Recursion/.vs/Recursion/v17/.suo
+Advanced Programming/Week 1/Recursion/.vs/Recursion/v17/.wsuo
+Advanced Programming/Week 1/Recursion/.vs/Recursion/v17/Browse.VC.db
+Advanced Programming/Week 1/Recursion/.vs/Recursion/v17/ipch/AutoPCH/12915b3ba9ee043d/RECURSION.ipch
+Advanced Programming/Week 1/Recursion/.vs/Recursion/v17/ipch/AutoPCH/f2b6fe2c9624e46b/RECURSION.ipch
+Advanced Programming/Week 1/Recursion/.vs/RecursionLab/v17/.wsuo
+Advanced Programming/Week 1/Recursion/.vs/RecursionLab/v17/Browse.VC.db
