.gitignore adding .vs and debug folders for VecotorsAndSorthing solution

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Advanced Programming/Week 2/ClassCreationLab/x64/Debug/ClassCreationLab.tlog/lin
 Advanced Programming/Week 2/ClassCreationLab/x64/Debug/ClassCreationLab.tlog/link.read.2.tlog
 Advanced Programming/Week 2/ClassCreationLab/x64/Debug/ClassCreationLab.tlog/link.write.1.tlog
 Advanced Programming/Week 2/ClassCreationLab/x64/Debug/ClassCreationLab.tlog/unsuccessfulbuild
+/Advanced Programming/Week 3/VectorsAndSorting/.vs
+/Advanced Programming/Week 3/VectorsAndSorting/x64/Debug
