.gitignore test files

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,14 @@ Advanced Programming/Week 2/ClassCreationLab/x64/Debug/ClassCreationLab.tlog/uns
 /Advanced Programming/Week 3/VectorsAndSortingV2/x64/Debug/VectorsAndSortingV2.log
 /Advanced Programming/Week 3/VectorsAndSortingV2/x64/Debug/VectorsAndSortingV2.pdb
 /Advanced Programming/Week 3/VectorsAndSortingV2/x64/Debug/VectorsAndSortingV2.vcxproj.FileListAbsolute.txt
+Advanced Programming/Week 3/VectorsAndSortingV2/.vs/VectorsAndSortingV2/v17/.wsuo
+Advanced Programming/Test Cases/TestSolution/.vs/TestSolution/FileContentIndex/6e784fcf-34e2-4791-bd49-2fe30b47546c.vsidx
+Advanced Programming/Test Cases/TestSolution/.vs/TestSolution/FileContentIndex/956a8ff2-c602-4dea-bc8b-94b35a664ab2.vsidx
+Advanced Programming/Test Cases/TestSolution/.vs/TestSolution/FileContentIndex/read.lock
+Advanced Programming/Test Cases/TestSolution/.vs/TestSolution/v17/.suo
+Advanced Programming/Test Cases/TestSolution/.vs/TestSolution/v17/Browse.VC.db
+Advanced Programming/Test Cases/TestSolution/TestProject/Source.cpp
+Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj
+Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj.filters
+Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj.user
+Advanced Programming/Test Cases/TestSolution/TestSolution.sln
