--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,6 @@ Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj
 Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj.filters
 Advanced Programming/Test Cases/TestSolution/TestProject/TestProject.vcxproj.user
 Advanced Programming/Test Cases/TestSolution/TestSolution.sln
+/Advanced Programming/Week 4/Lab4/.vs/Lab4
+/Advanced Programming/Week 4/Lab4/x64/Debug
+/Advanced Programming/Week 4/Lab4/ClassComposition/x64/Debug
