Database queries and starting notes

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ Advanced Programming/Test Cases/TestSolution/TestSolution.sln
 /Advanced Programming/Week 4/Lab4/.vs/Lab4
 /Advanced Programming/Week 4/Lab4/x64/Debug
 /Advanced Programming/Week 4/Lab4/ClassComposition/x64/Debug
+Advanced Programming/Week 4/Lab4.zip
