Lab5 Almost complete, missing File Creation and error checking

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ Advanced Programming/Test Cases/TestSolution/TestSolution.sln
 /Advanced Programming/Week 4/Lab4/x64/Debug
 /Advanced Programming/Week 4/Lab4/ClassComposition/x64/Debug
 Advanced Programming/Week 4/Lab4.zip
+/Advanced Programming/Week 5
