Starting work on Lab 6

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ Advanced Programming/Test Cases/TestSolution/TestSolution.sln
 /Advanced Programming/Week 4/Lab4/ClassComposition/x64/Debug
 Advanced Programming/Week 4/Lab4.zip
 /Advanced Programming/Week 5
+/Advanced Programming/Week 6/Lab6/x64/Debug
+/Advanced Programming/Week 6/Lab6/.vs/Lab6
+/Advanced Programming/Week 6/Lab6/DynamicMemory/x64/Debug
