--- a/Advanced Programming/Week 6/Lab6/DynamicMemory/DynamicMemory.vcxproj.filters
+++ b/Advanced Programming/Week 6/Lab6/DynamicMemory/DynamicMemory.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Book.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="BookDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Book.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
