--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ Advanced Programming/Week 4/Lab4.zip
 /Advanced Programming/Week 6/Lab6/x64/Debug
 /Advanced Programming/Week 6/Lab6/.vs/Lab6
 /Advanced Programming/Week 6/Lab6/DynamicMemory/x64/Debug
+Advanced Programming/Week 6/Lab6.zip
