--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ Advanced Programming/Week 4/Lab4.zip
 /Advanced Programming/Week 6/Lab6/.vs/Lab6
 /Advanced Programming/Week 6/Lab6/DynamicMemory/x64/Debug
 Advanced Programming/Week 6/Lab6.zip
+Database Management/~$seph Patrick Lab Advanced Structured Query Language (SQL) Queries.docx
